[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"
default_run = "./target/release/rust_server"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_server"

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
redis = "0.22.3"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.14"
